--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.6.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
+    "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
