Add GitHub OAuth Authentication with Supabase

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ VITE_GEMINI_API_KEY=
 
 # Netlify Personal Access Token - Get yours from https://app.netlify.com/user/applications#personal-access-tokens
 VITE_NETLIFY_TOKEN=
+
+# Supabase Configuration - Get these from your Supabase project settings
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
