--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.11.0",
     "@monaco-editor/react": "^4.6.0",
+    "@supabase/supabase-js": "^2.39.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "prettier": "^3.5.3",
